maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:52: error: Unmatched closing brace '}' ignored here
}
^